:art: Clean up code based on IntelliJ recommendations